--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<li><a href="https://chocolatey.org/">https://chocolatey.org/</a></li>
 			<li><a href="https://chocolatey.org/packages/GitHub">https://chocolatey.org/packages/GitHub</a></li>
 			<li><a href="https://github.com">https://github.com</a></li>
-			<li><a href="https://octodex.github.com/">Octodex</a><li>
+			<li><a href="http://rogerdudler.github.io/git-guide/">http://rogerdudler.github.io/git-guide/</a></li>
 		</ul>
 	</div></section>
 	
