--- a/index.html
+++ b/index.html
@@ -25,10 +25,16 @@
 	
 	<section class="slide"><div>
 		<ul>
-			<li><a href="https://chocolatey.org/">https://chocolatey.org/</a></li>
-			<li><a href="https://chocolatey.org/packages/GitHub">https://chocolatey.org/packages/GitHub</a></li>
-			<li><a href="https://github.com">https://github.com</a></li>
+			<li>Install</li>
+			<li><a href="https://chocolatey.org/">Chocolatey</a></li>
+			<li><a href="https://chocolatey.org/packages/Git">Git</a></li>
+			<li><a href="https://chocolatey.org/packages/GitHub">GitHub for desktop</a></li>
+			<li><a href="https://chocolatey.org/packages/SourceTree">SourceTree</a></li>
+			<li>Tutorial</li>
 			<li><a href="http://rogerdudler.github.io/git-guide/">http://rogerdudler.github.io/git-guide/</a></li>
+			<li>Repository hosting</li>
+			<li><a href="https://github.com">https://github.com</a></li>
+			<li><a href="https://bitbucket.org">https://bitbucket.org</a></li>
 		</ul>
 	</div></section>
 	
