--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<img src="pictures/git-model@2x.png" style="height: 100%;" />
 	</div></section>
 	
-	<section class="slide"><div>
+	<section class="slide"><div style="padding-top: 50px;">
 		<ul>
 			<li>Install</li>
 			<li><a href="https://chocolatey.org/">Chocolatey</a></li>
